[project]
name = "clonning-face-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
    ]
