[project]
name = "clonning-face-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.1.0",
    "ipykernel>=6.29.5",
    "yt-dlp>=2025.1.15",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
    ]
